--- a/gihon/style.css
+++ b/gihon/style.css
@@ -299,16 +299,16 @@ label {
   color: #1f51d3;
 }
 .logo-wrapper {
-  padding: 25px 0;
+  padding: 27px 0;
   position: relative;
   z-index: 2;
 }
 .logo {
-  color: #434343;
+  color: #222;
   font-family: 'Poppins', sans-serif;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   text-transform: capitalize;
 }
 .cx-menu ul {
@@ -325,9 +325,9 @@ label {
 }
 .cx-menu ul li a {
   font-family: 'Poppins', sans-serif;
-  color: #777777;
+  color: #555;
   display: block;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -980,11 +980,49 @@ label {
 /* -----------------------------
 12. Testimonial area style
 -------------------------------- */
+.single-testimonial-content {
+  padding: 0 15px;
+}
+.single-testimonial blockquote {
+  padding: 20px;
+  margin: 0 0 20px;
+  font-size: 14px;
+  border-left: none;
+  background: #fff;
+  text-align: center;
+  box-shadow: 0 0px 25px rgba(0,0,0,0.04);
+}
+.single-testimonial img {
+  display: inline-block;
+  border-radius: 100%;
+  margin-bottom: 10px;
+}
+.client-name {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 3px;
+  color: #222;
+  margin: 0;
+}
 
-
-
-
-
+.client-position {
+  font-size: 12px;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  color: #999;
+  line-height: 1;
+}
+.info-description {
+  margin-bottom: 15px;
+}
+.rating {
+  margin-bottom: 10px;
+}
+.rating li {
+  color: #ffba33;
+  font-size: 17px;
+}
 
 
 
