Home page updted with 2 new section

--- a/gihon/css/elements.css
+++ b/gihon/css/elements.css
@@ -191,39 +191,33 @@
     src: url('../fonts/slick.eot?#iefix') format('embedded-opentype'), url('../fonts/slick.woff') format('woff'), url('../fonts/slick.ttf') format('truetype'), url('../fonts/slick.svg#slick') format('svg');
 }
 /* Arrows */
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-
-    position: absolute;
-    top: 50%;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
+/* Arrows */
+.slick-prev, 
+.slick-next {
+  background: #1f51d3 none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 100%;
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.1);
+  color: transparent;
+  cursor: pointer;
+  display: block;
+  font-size: 0;
+  height: 50px;
+  line-height: 0;
+  outline: medium none;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  transform: translate(0px, -50%);
+  width: 50px;
 }
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
+.slick-prev:hover, 
+.slick-prev:focus, 
+.slick-next:hover, 
+.slick-next:focus {
+  background: #1f51d3 none repeat scroll 0 0;
+  color: #fff;
+  outline: medium none;
 }
 .slick-prev:hover:before,
 .slick-prev:focus:before,
@@ -238,18 +232,13 @@
     opacity: .25;
 }
 
-.slick-prev:before,
-.slick-next:before
-{
-    font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-
-    opacity: .75;
-    color: white;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+.slick-prev::before, 
+.slick-next::before {
+  color: #fff;
+  font-family: fontawesome;
+  font-size: 20px;
+  line-height: 1;
+  opacity: 0.75;
 }
 
 .slick-prev
@@ -261,9 +250,8 @@
     right: -25px;
     left: auto;
 }
-.slick-prev:before
-{
-    content: '←';
+.slick-prev::before {
+  content: "";
 }
 [dir='rtl'] .slick-prev:before
 {
@@ -279,9 +267,8 @@
     right: auto;
     left: -25px;
 }
-.slick-next:before
-{
-    content: '→';
+.slick-next::before {
+  content: "";
 }
 [dir='rtl'] .slick-next:before
 {
