--- a/gihon/style.css
+++ b/gihon/style.css
@@ -168,7 +168,11 @@ label {
 .gray-bg {
   background: #f6f8fa;
 }
-
+.wrapper {
+  position: relative;
+  overflow: hidden;
+  clear: both;
+}
 
 /* ------------------------------
 2. Button style
@@ -302,6 +306,7 @@ label {
   padding: 27px 0;
   position: relative;
   z-index: 2;
+  transition: .3s;
 }
 .logo {
   color: #222;
@@ -319,6 +324,7 @@ label {
   margin-left: 35px;
   padding: 30px 0;
   position: relative;
+  transition: .3s;
 }
 .cx-menu ul li:last-child {
   padding-right: 0;
@@ -385,6 +391,7 @@ label {
     color: #fff;
     padding: 18px 0px;
     text-align: center;
+    transition: .3s;
 }
 .header-action a {
   color: #fff;
@@ -395,6 +402,27 @@ label {
     text-transform: uppercase;
     font-weight: 600;
 }
+.main-header-area.s {
+  transition: .3s all;
+  background: #fff;
+  position: fixed;
+  width: 100%;
+}
+.is-sticky .main-header-area {
+  box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+}
+.is-sticky .cx-menu ul > li {
+  padding: 25px 0;
+}
+
+.is-sticky .header-action {
+  padding: 13px 0;
+}
+
+.is-sticky .logo-wrapper {
+  padding: 22px 0;
+}
+
 
 
 /* -----------------------------
@@ -467,7 +495,7 @@ label {
 }
 .slider-wrapper .slick-next {
   right: 50px;
-  z-index: 999;
+  z-index: 9;
 }
 .slider-wrapper .slick-prev, .slider-wrapper .slick-next {
   height: 50px;
@@ -903,7 +931,8 @@ label {
 }
 
 .cx-list li i {
-    margin-right: 10px;
+  margin-right: 10px;
+  color: #9bb916;
 }
 
 /* -----------------------------
@@ -1026,91 +1055,70 @@ label {
 
 
 
-
-
-.brand-logo-wrapper {
-  overflow: hidden;
+.navigation-one .slick-prev::before, 
+.navigation-one .slick-next::before {
+  color: #fff;
+  font-size: 28px;
+  opacity: 1;
+  transition: all 0.3s ease 0s;
 }
-.brand-logo-wrapper .single-logo {
-  border-top: 1px solid #e5e5e5;
-  border-left: 1px solid #e5e5e5;
-  float: left;
-  width: 33.33333%;
-  overflow: hidden;
-  text-align: center;
-  height: 100px;
-  line-height: 100px;
+.navigation-one .slick-prev:hover::before, 
+.navigation-one .slick-next:hover::before {
+  color: #fff;
 }
-.single-logo > a {
-  display: block;
+.navigation-one .slick-prev,
+.navigation-one .slick-next {
+    opacity: 0;
+    transition: all 0.3s linear 0s;
 }
-.single-logo:nth-child(1) {
-  border-left: medium none;
-  border-top: medium none navy;
+.navigation-one:hover .slick-prev,
+.navigation-one:hover .slick-next {
+    opacity: 1;
 }
-.single-logo:nth-child(2),
-.single-logo:nth-child(3) {
-  border-top: medium none;
+.navigation-one .slick-prev {
+    left: -5px;
+    z-index: 999;
 }
-.single-logo:nth-child(4),
-.single-logo:nth-child(7) {
-  border-left: medium none;
+.navigation-one:hover .slick-prev {
+    left: -20px;
 }
-.testimonial-wrapper .slick-dots li button::before {
-  color: #363636;
+.navigation-one .slick-next {
+    right: -5px;
+    z-index: 999;
 }
-.slick-dots li button:hover::before,
-.slick-dots li button:focus::before {
-  color: #1f51d3;
-}
-.slick-dots li.slick-active button::before {
-  color: #1f51d3;
-}
-.testimonial-wrapper .slick-dots {
-  bottom: 0;
-  position: relative;
-  left: 5px;
-  text-align: left;
-}
-.testimonial-wrapper .slick-dotted.slick-slider {
-  margin-bottom: 0;
+.navigation-one:hover .slick-next {
+    right: -20px;
 }
 
-/* -----------------------------
-13. Client logo area style
--------------------------------- */
-.single-brand-logo {
-  width: 20%;
-  float: left;
-  overflow: hidden;
-  padding: 30px;
-  border-bottom: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
+
+
+
+
+
+
+
+
+/*Brand Logo */
+.single-brand-outer {
+  padding: 0 15px;
 }
-.single-brand-logo:nth-child(5n) {
-  border-right: 0 none;
+.single-brand-inner {
+  background: #fff;
+  padding: 30px 20px;
+  border-radius: 3px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+  line-height: 1;
 }
-.single-brand-logo:nth-child(6n),
-.single-brand-logo:nth-child(7n),
-.single-brand-logo:nth-child(8n),
-.single-brand-logo:nth-child(9n),
-.single-brand-logo:nth-child(10n) {
-  border-bottom: 0 none;
+.brand-logo-area {
+  margin-top: 80px;
 }
-.brand-logo-outer {
-  width: 100%;
-  height: 100px;
-  display: table;
-}
-.brand-logo-inner {
-  display: table-cell;
-  vertical-align: middle;
-}
-.single-brand-logo img {
-  max-width: 120px;
-  position: relative;
-  cursor: pointer;
-}
+
+
+
+
+
+
+
 
 /* -----------------------------
 14. Team area style
@@ -1270,18 +1278,15 @@ label {
   display: inline-block;
 }
 .subscribe-control {
-  border: 1px solid #e5e5e5;
+  border: 1px solid #eee;
   height: 45px;
   padding: 0 20px;
   width: 450px;
+  border-radius: 100px;
 }
 .email-submit-btn i {
   margin-left: 8px;
 }
-.email-submit-btn:hover {
-  border: 1px solid #e5e5e5;
-}
-
 /* -----------------------------
 17. Contact area style
 -------------------------------- */
@@ -2129,7 +2134,7 @@ label {
     color: #ffffff;
     font-size: 20px;
     height: 50px;
-    line-height: 50px;
+    line-height: 48px;
     opacity: 0;
     position: fixed;
     right: 30px;
