Home page updted with 2 new section

--- a/gihon/style.css
+++ b/gihon/style.css
@@ -489,47 +489,6 @@ label {
 .cx-slider-2 .slider-3 {
   background: rgba(0, 0, 0, 0) url("img/slider/1.jpg") no-repeat scroll center center / cover;
 }
-.slider-wrapper .slick-prev {
-  left: 50px;
-  z-index: 999;
-}
-.slider-wrapper .slick-next {
-  right: 50px;
-  z-index: 9;
-}
-.slider-wrapper .slick-prev, .slider-wrapper .slick-next {
-  height: 50px;
-  width: 50px;
-  opacity: 0;
-  transition: all 0.3s ease-in-out 0s;
-  display: block;
-}
-.slick-prev::before {
-  content: "\f104";
-}
-.slick-next::before {
-  content:"\f105";
-}
-.slider-wrapper .slick-prev::before, .slider-wrapper .slick-next::before {
-  background: #1f51d3 none repeat scroll 0 0;
-  display: block;
-  font-family: "fontawesome";
-  font-size: 30px;
-  line-height: 50px;
-  opacity: 0.75;
-  z-index: 9999;
-  border-radius: 2px;
-  transition: all 0.3s ease 0s;
-}
-.slider-wrapper .slick-prev:hover::before, 
-.slider-wrapper .slick-next:hover::before {
-  background: #1f51d3;
-  opacity: 1;
-}
-.slider-wrapper:hover .slick-prev,
-.slider-wrapper:hover .slick-next {
-  opacity: 1;
-}
 .single-slider {
   position: relative;
 }
@@ -1079,15 +1038,22 @@ label {
     left: -5px;
     z-index: 999;
 }
-.navigation-one:hover .slick-prev {
-    left: -20px;
-}
+
 .navigation-one .slick-next {
     right: -5px;
     z-index: 999;
 }
 .navigation-one:hover .slick-next {
     right: -20px;
+}
+.navigation-one:hover .slick-prev {
+    left: -20px;
+}
+.slider-wrapper.navigation-one:hover .slick-next {
+    right: 40px;
+}
+.slider-wrapper.navigation-one:hover .slick-prev {
+    left: 40px;
 }
 
 
@@ -1986,45 +1952,47 @@ label {
 26. Footer area style
 -------------------------------- */
 .footer-top-area {
-  background: #171717;
-  padding: 100px 0;
+  background: #27313e;
+  padding: 90px 0;
 }
 .footer-widget-heading .logo span,
 .footer-widget-heading .logo {
   color: #ffffff;
 }
 .footer-widget-content {
-  margin-top: 30px;
+  margin-top: 25px;
 }
 .footer-about-info-area .footer-widget-content {
   margin-top: 35px;
 }
 .footer-widget-content p {
-  color: #9FA4AF;
+  color: #E9E9E9;
 }
-.footer-social-menu  {
-  margin-top: 30px;
+.footer-social-menu {
+  text-align: right;
 }
 .footer-social-menu li a {
-  font-size: 16px;
-  color: #9FA4AF;
-  background: #1C1F23;
-  height: 40px;
-  line-height: 40px;
-  width: 40px;
+  font-size: 14px;
+  color: #fff;
+  background: #1f51d3;
+  height: 35px;
+  line-height: 35px;
+  width: 35px;
   text-align: center;
   display: block;
-  border-radius: 2px;
+  border-radius: 100%;
 }
 .footer-social-menu li a:hover {
   background: #1f51d3;
   color: #fff;
 } 
 .footer-widget-heading h3 {
-  color: #F0F0F0;
+  color: #E9E9E9;
   font-size: 18px;
   position: relative;
   padding-bottom: 10px;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 .footer-widget-heading h3::before {
   background: #9FA4AF;
@@ -2044,13 +2012,13 @@ label {
   margin-right: 5px;
 }
 .footer-widget-menu li a {
-  border: 1px solid #363636;
-  border-radius: 2px;
-  color: #9fa4af;
+  border: 1px solid #E9E9E9;
+  border-radius: 3px;
+  color: #e1e1e1;
   display: block;
   font-size: 12px;
   letter-spacing: 1px;
-  padding: 5px 13px;
+  padding: 5px 15px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -2062,26 +2030,28 @@ label {
   padding-top: 10px;
 }
 .footer-conatct-menu li a {
-  color: #9FA4AF;
+  color: #E9E9E9;
   font-size: 13px;
 }
 .footer-conatct-menu li a i {
   padding-right: 10px;
 }
 .footer-conatct-menu li a span {
-  font-weight: 600;
-  padding-right: 2px;
+  font-weight: 500;
+  padding-right: 5px;
 }
 .footer-bottom-area {
-  background: #101010;
-  padding: 30px 0;
+  background: #1b222b;
+  padding: 20px 0;
 }
 .footer-copyright-info p {
-  color: #aaa;
+  color: #E9E9E9;
   font-size: 12px;
   letter-spacing: 1px;
   margin: 0;
   text-transform: uppercase;
+  line-height: 1;
+  margin-top: 13px;
 }
 .footer-copyright-info p a {
   color: #ffffff;
@@ -2100,7 +2070,7 @@ label {
   margin-right: 22px;
 }
 .footer-main-menu li a {
-  color: #aaa;
+  color: #E9E9E9;
   display: block;
   font-size: 12px;
   letter-spacing: 1px;
