--- a/nitcoin/style.css
+++ b/nitcoin/style.css
@@ -1,3 +1,8 @@
+
+#ee9209
+#2C2E3E
+#6d6d6d
+
 /* -----------------------------
 Template Name: Pishon Corporate HTML5 template.
 Author: CXWebExperts
@@ -163,7 +168,7 @@ label {
   padding: 100px 0;
 }
 .gray-bg {
-  background: #f6f6f6;
+  background: #f6f8fa;
 }
 
 
@@ -171,7 +176,7 @@ label {
 2. Button style
 ---------------------------------*/
 .button {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border: 1px solid transparent;
   border-radius: 2px;
   color: #fff;
@@ -202,7 +207,7 @@ label {
 }
 .load-more-btn:hover, 
 .load-more-btn:focus {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border: 1px solid transparent;
   color: #ffffff;
   opacity: 0.8;
@@ -217,7 +222,7 @@ label {
   position: relative;
 }
 .area-heading::before {
-  background: #03A9F4;
+  background: #ee9209;
   content: "";
   bottom: -30px;
   position: absolute;
@@ -243,53 +248,57 @@ label {
 /* -----------------------------
 4. Header area style
 -------------------------------- */
-.header-area {
-  border-bottom: 1px solid #e5e5e5;
-}
 .header-top-area {
-  border-bottom: 1px solid #e5e5e5;
+    background: #3e3e3e;
 }
 .email-phone li {
-  border-left: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
+  border-left: 1px solid #565656;
+  border-right: 1px solid #565656;
   float: left;
 }
 .email-phone li:first-child {
   border-right: 1px solid transparent;
 }
+html {
+  display: none;
+}
 .email-phone li a {
-  color: #777;
-  display: block;
-  font-size: 14px;
-  padding: 10px 15px;
-  text-transform: capitalize;
+    color: #c7c2c2;
+    display: block;
+    font-size: 12px;
+    padding: 0 15px;
+    text-transform: capitalize;
+    line-height: 40px;
+    letter-spacing: 1px;
+    font-weight: 600;
 }
 .email-phone a i {
-  color: #03A9F4;
+  color: #ee9209;
   padding-right: 6px;
 }
 .header-social-menu {
   float: right;
 }
 .header-social-menu li {
-  float: left;
-  border-left: 1px solid #e5e5e5;
+    float: left;
+    border-left: 1px solid #565656;
 }
 .text-bold {
-  font-weight: 500;
-  margin-left: 5px;
+    margin-left: 5px;
+    text-transform: lowercase;
 }
 .header-social-menu li:last-child {
-  border-right: 1px solid #e5e5e5;
+  border-right: 1px solid #565656;
 }
 .header-social-menu li a {
-  color: #777777;
-  display: block;
-  font-size: 16px;
-  padding: 10px 15px;
+    color: #c7c2c2;
+    display: block;
+    font-size: 14px;
+    padding: 0 15px;
+    line-height: 40px;
 }
 .header-social-menu li a:hover {
-  color: #03a9f4;
+  color: #ee9209;
 }
 .logo-wrapper {
   padding: 20px 0;
@@ -304,7 +313,7 @@ label {
   text-transform: capitalize;
 }
 .logo i {
-  color: #03a9f4;
+  color: #ee9209;
   font-size: 30px;
   padding-right: 10px;
 }
@@ -334,11 +343,11 @@ label {
   padding-left: 5px;
 }
 .cx-menu ul li:hover > a {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .cx-menu li ul {
   background: #ffffff;
-  border-top: 2px solid #03A9F4;
+  border-top: 2px solid #ee9209;
   box-shadow: 0 1px 2px rgba(86, 86, 90, 0.4);
   float: none;
   position: absolute;
@@ -371,7 +380,7 @@ label {
   padding: 10px 0 10px 20px;
 }
 .cx-menu li ul li a:hover {
-  background: #03A9F4;
+  background: #ee9209;
   color: #ffffff;
   display: block;
 }
@@ -400,7 +409,7 @@ label {
   color: #333;
 }
 .mean-container .mean-nav {
-  background: #03A9F4;
+  background: #ee9209;
 }
 .mean-container .mean-nav ul li a {
   border-top: 1px solid #fff;
@@ -413,7 +422,7 @@ label {
   border: 0 1px 1px solid transparent;
 }
 .mean-container .mean-nav ul li a.mean-expand:hover {
-  background: #03A9F4;
+  background: #ee9209;
 }
 .mean-container .mean-nav ul li a.mean-expand {
   padding: 15px !important;
@@ -462,7 +471,7 @@ label {
   content:"\f105";
 }
 .slider-wrapper .slick-prev::before, .slider-wrapper .slick-next::before {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   display: block;
   font-family: "fontawesome";
   font-size: 30px;
@@ -474,7 +483,7 @@ label {
 }
 .slider-wrapper .slick-prev:hover::before, 
 .slider-wrapper .slick-next:hover::before {
-  background: #03A9F4;
+  background: #ee9209;
   opacity: 1;
 }
 .slider-wrapper:hover .slick-prev,
@@ -506,7 +515,7 @@ label {
   text-transform: unset;
 }
 .slider-content p span {
-  color: #03A9F4;
+  color: #ee9209;
   font-weight: 900;
 }
 .slider-button {
@@ -532,7 +541,7 @@ label {
   color: #232323;
 }
 .template-text {
-  color: #03a9f4;
+  color: #ee9209;
 }
 
 
@@ -572,7 +581,7 @@ label {
   font-size: 30px;
   height: 100px;
   line-height: 98px;
-  color: #03a9f4;
+  color: #ee9209;
   margin-bottom: 30px;
   text-align: center;
   width: 100px;
@@ -597,7 +606,7 @@ label {
   outline: none;
 }
 .banner-subscribe-form button {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border: 1px solid transparent;
   border-radius: 0 2px 2px 0;
   color: #fff;
@@ -659,7 +668,7 @@ label {
   position: relative;
 }
 .single-feature::before {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   content: "";
   height: 100%;
   left: 0;
@@ -694,7 +703,7 @@ label {
   overflow: hidden;
 }
 .single-feature a {
-  color: #03a9f4;
+  color: #ee9209;
   font-family: raleway;
   font-size: 12px;
   font-weight: 600;
@@ -743,7 +752,7 @@ label {
 }
 .portfolio-filter li a:hover,
 .portfolio-filter li.active a {
-  background: #03A9F4;
+  background: #ee9209;
   color: #fff;
   border: 1px solid transparent;
 }
@@ -875,10 +884,10 @@ label {
   margin-bottom: 0;
 }
 .single-experience .progress-bar {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   box-sizing: border-box;
   box-shadow: none;
-  color: #03a9f4;
+  color: #ee9209;
   font-size: 11px;
   overflow: visible;
   padding-top: 2px;
@@ -895,7 +904,7 @@ label {
   text-transform: uppercase;
 }
 .progress-bar span {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border-radius: 2px 2px 0;
   bottom: 10px;
   color: #fff;
@@ -910,7 +919,7 @@ label {
   text-align: center;
 }
 .progress-bar span::before {
-  border-color: transparent #03a9f4 transparent transparent;
+  border-color: transparent #ee9209 transparent transparent;
   border-style: solid;
   border-width: 0 5px 7px 0;
   content: "";
@@ -1020,10 +1029,10 @@ blockquote {
 }
 .slick-dots li button:hover::before,
 .slick-dots li button:focus::before {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .slick-dots li.slick-active button::before {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .testimonial-wrapper .slick-dots {
   bottom: 0;
@@ -1145,7 +1154,7 @@ blockquote {
   font-size: 20px;
 }
 .member-menu li a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 
 /* -----------------------------
@@ -1177,11 +1186,11 @@ blockquote {
   transition: all 0.3s ease 0s;
 }
 .single-project-history:hover .project-icon {
-  background: #03a9f4;
+  background: #ee9209;
   border: 1px solid transparent;
 }
 .project-icon::before {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   content: "";
   height: 1px;
   left: 100%;
@@ -1198,7 +1207,7 @@ blockquote {
   font-size: 60px;
 }
 .project-icon p {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border: 1px solid #fff;
   border-radius: 50%;
   color: #ffffff;
@@ -1266,7 +1275,7 @@ blockquote {
   text-transform: capitalize;
 }
 .single-contact-option a {
-  color: #03A9F4;
+  color: #ee9209;
   display: block;
 }
 .single-contact-option a:hover {
@@ -1334,7 +1343,7 @@ blockquote {
   color: #333;
 }
 .breadcrumb-list > li > a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .breadcrumb-list > li::after {
   color: #333;
@@ -1497,7 +1506,7 @@ blockquote {
   text-decoration: underline;
 }
 .single-project-meta li a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .single-project-title {
   border-bottom: 1px solid #e5e5e5;
@@ -1518,7 +1527,7 @@ blockquote {
   text-transform: uppercase;
 }
 .project-link:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .prev-project i {
   margin-right: 7px;
@@ -1602,7 +1611,7 @@ blockquote {
   padding: 20px;
 }
 .post-cat-list a:hover {
-  color: #03A9F4;
+  color: #ee9209;
   padding-left: 5px;
 }
 .post-cat-list {
@@ -1644,7 +1653,7 @@ blockquote {
   padding: 20px 0;
 }
 .tags > a:hover {
-  background: #03A9F4;
+  background: #ee9209;
   color: #fff;
   border: 1px solid transparent;
 }
@@ -1668,7 +1677,7 @@ blockquote {
   margin-bottom: 5px;
 }
 .post-widget-content h4 a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .post-widget-content p {
   font-weight: 500;
@@ -1849,7 +1858,7 @@ blockquote {
   text-align: center;
 }
 .history-social-menu li a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .history-social-menu {
   margin-top: 40px;
@@ -1971,7 +1980,7 @@ blockquote {
   border-radius: 2px;
 }
 .footer-social-menu li a:hover {
-  background: #03A9F4;
+  background: #ee9209;
   color: #fff;
 } 
 .footer-widget-heading h3 {
@@ -2009,7 +2018,7 @@ blockquote {
   text-transform: uppercase;
 }
 .footer-widget-menu li a:hover {
-  background: #03A9F4;
+  background: #ee9209;
   color: #ffffff;
 }
 .footer-contact-info-area .footer-widget-content {
@@ -2044,7 +2053,7 @@ blockquote {
   text-transform: capitalize;
 }
 .footer-copyright-info p a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .footer-main-menu {
   float: right;
@@ -2061,7 +2070,7 @@ blockquote {
   text-transform: uppercase;
 }
 .footer-main-menu li a:hover {
-  color: #03A9F4;
+  color: #ee9209;
 }
 .footer-instram-widget {
   margin-top: 40px; 
@@ -2082,7 +2091,7 @@ blockquote {
 }
 
 .to-top-btn {
-  background: #03a9f4 none repeat scroll 0 0;
+  background: #ee9209 none repeat scroll 0 0;
   border-radius: 2px;
   bottom: 30px;
   color: #ffffff;
