--- a/cryptox/css/responsive.css
+++ b/cryptox/css/responsive.css
@@ -222,6 +222,76 @@
     padding: 0;
     text-align: center;
 }
+.process-icon::after {
+   display: none;
+}
+.process-box h5 {
+    font-size: 18px;
+    margin-top: 20px;
+}
+.process-icon {
+    height: 105px;
+    line-height: 120px;
+    width: 105px;
+}
+.process-icon i {
+    font-size: 30px;
+}
+.process-icon p {
+    font-size: 14px;
+    height: 40px;
+    line-height: 40px;
+    font-weight: 500;
+    width: 40px;
+}
+.ex-bg {
+    background-color: #F6F8FA;
+    background-image: none;
+}
+.single-counter {
+    margin-bottom: 30px;
+}
+.counter-text p {
+    font-size: 30px;
+}
+.counter-text > h4 {
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+.action-content {
+    text-align: center;
+}
+.action-button {
+    text-align: center;
+    margin-top: 20px;
+}
+.subscribe-content {
+    text-align: center;
+}
+.subscribe-content {
+    text-align: center;
+}
+.subscription-form {
+    text-align: center;
+    margin-top: 20px;
+}
+.area-heading.area-heading-2 {
+    text-align: center;
+}
+.area-heading-2.area-heading::before {
+    left: auto;
+    transform: translateX(-50%);
+}
+.area-heading-2.area-heading::after {
+    left: auto;
+    transform: translateX(-50%) rotate(90deg);
+}
+
+
+
+
+
 
 
     .single-feature .feature-content {
@@ -354,17 +424,13 @@
     .container {
         width: 300px
     }
-    .mean-container .mean-bar {
-        top: 0;
-        left: 0;
-    }
-    .mean-container .mean-nav {
-        width: 100%;
-        float: right;
-    }
+.xboot-section {
+    padding: 80px 0;
+    overflow: hidden;
+}    
     .email-phone li a {
         display: inline-block;
-        padding: 10px 8px;
+        padding: 0 8px;
     }
     .email-phone li {
         border-left: none;
@@ -380,6 +446,7 @@
     .header-social-menu {
         display: inline-block;
         float: none;
+        margin-top: 5px;
     }
     .header-social-menu li {
         border: none;
@@ -392,15 +459,211 @@
     .header-social-menu li a {
         display: inline-block;
         padding: 0;
+        line-height: 26px;
     }
-    .area-heading,
-    .action-content {
-        width: 100%;
-    }
-    .area-title {
-        font-size: 20px;
-        line-height: 30px;
-    }
+
+.slide-content-wrapper {
+    height: 600px;
+}
+.slide-content {
+    text-align: center;
+}
+.slide-title {
+    font-size: 30px;
+    font-weight: 700;
+}
+.slide-subtitle {
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+.slide-description {
+    font-size: 14px;
+    font-weight: normal;
+    letter-spacing: 0;
+    line-height: 1.6;
+}
+.slide-content .button + .button {
+    margin-left: 0;
+    margin-top: 15px;
+}
+.xboot-single-slide {
+    background-position: center center;
+}
+.xboot-single-slide:first-child {
+    background-position: center right;
+}
+.xboot-single-slide:nth-child(3) {
+    background-position: center right;
+}
+.intro-content {
+    margin-top: 30px;
+    text-align: center;
+    width: 100%;
+    margin: 50px auto 0;
+}
+.intro-content h3 {
+    font-size: 24px;
+}
+.intro-image img {
+    width: 80%;
+    margin: auto;
+}
+.video-message {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    transform: translateY(-50%);
+    left: 0;
+}
+.video-play-icon {
+    background: #EE9209 none repeat scroll 0 0;
+    border-radius: 100%;
+    color: #fff;
+    display: inline-block;
+    font-size: 18px;
+    height: 60px;
+    line-height: 58px;
+    width: 60px;
+    position: relative;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+}
+.video-play-icon i {
+    left: 3px;
+    position: relative;
+}
+.process-icon::after {
+    display: none;
+}
+.process-box {
+    padding: 0 10px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.feature-content h4 {
+    font-size: 20px;
+}
+.area-heading,
+.action-content {
+    width: 100%;
+}
+.area-title {
+    font-size: 26px;
+    line-height: 34px;
+}
+.area-heading p {
+    font-weight: 400;
+    font-size: 14px;
+}
+.process-box h5 {
+    display: inline-block;
+    font-weight: 600;
+    margin-top: 25px;
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+.col-md-4:last-child .process-box {
+    margin-bottom: 0;
+}
+.ex-bg {
+    background-image: none;
+}
+.tab-content h2 {
+    font-size: 24px;
+    line-height: 32px;
+}
+.block-text h4 {
+    line-height: 28px;
+}
+.nav-tabs > li {
+    float: none;
+    margin-bottom: 15px;
+    margin-right: 0;
+    padding-right: 20px;
+}
+.nav-tabs > li:last-child {
+    margin-bottom: 0;
+}
+.nav-tabs > li > a {
+    width: 100%;
+}
+.single-counter {
+    margin-bottom: 30px;
+}
+.counter-text p {
+    font-size: 30px;
+}
+.counter-text > h4 {
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+.action-heading {
+    text-align: center;
+}
+.action-heading h3 {
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: 0px;
+}
+.action-heading p {
+    color: #fbfbfb;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 22px;
+    width: 100%;
+}
+.action-button {
+    text-align: center;
+    margin-top: 20px;
+}
+.testimonial-wrapper blockquote {
+    padding: 30px 10px;
+    margin-bottom: 0;
+}
+.single-testimonial p:not(.client-name) {
+    font-weight: 400;
+}
+.testimonial-wrapper blockquote::before {
+    left: 20px;
+    top: 35px;
+}
+.subscription-form {
+    text-align: left;
+    margin-top: 20px;
+}
+
+.blog-post {
+    margin-bottom: 30px;
+}
+.col-md-4:last-child .blog-post {
+    margin-bottom: 0;
+}
+.post-content {
+    overflow: hidden;
+    padding: 30px 20px;
+}
+.post-date li {
+    margin-right: 5px;
+}
+.post-title {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.post-content p {
+    font-weight: 400;
+}
+.tags li:last-child {
+    display: none;
+}
+.footer-main-menu li a {
+    color: #bdbdbd;
+    display: block;
+    font-size: 14px;
+    letter-spacing: 0px;
+    text-transform: capitalize;
+    font-weight: 500;
+}
     .portfolio-filter li {
         margin-bottom: 10px;
     }
@@ -477,18 +740,6 @@
     .breadcrumb-list>li:first-child {
         margin-left: 0;
     }
-    .history-thumbnail {
-        overflow: hidden;
-    }
-    .history-content {
-        margin-top: 30px;
-    }
-    .counter-wrapper .col-sm-6 .single-counter {
-        margin-bottom: 30px;
-    }
-    .counter-wrapper .col-sm-6:last-child .single-counter {
-        margin-bottom: 0;
-    }
     .col-sm-6 .single-price-table {
         margin-bottom: 30px;
     }
@@ -501,29 +752,12 @@
     .col-sm-6:last-child .single-team-member {
         margin-bottom: 0;
     }
-    .meta-info a {
-        line-height: 20px;
-    }
-    .blog-post:last-child {
-        margin-bottom: 30px;
-    }
     .single-project-description {
         margin-top: 30px;
     }
     .single-project-title {
         font-size: 18px;
         line-height: 24px;
-    }
-    .action-heading {
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    .action-heading h3 {
-        font-size: 20px;
-        line-height: 30px;
-    }
-    .action-button {
-        text-align: center;
     }
     .footer-top-area .col-md-3.col-sm-6 {
         margin-bottom: 30px;
